# RABBIT-ng

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml
src/rabbit/: __init__.py  cli.py  errors.py  main.py
src/rabbit/predictor/: __init__.py  core.py  features.py  models.py
src/rabbit/sources/: github_api.py  retry_utils.py
src/rabbit_ng/: __init__.py  cli.py  errors.py  main.py
src/rabbit_ng/predictor/: __init__.py  core.py  features.py  models.py
src/rabbit_ng/resources/models/: bimbas.onnx
src/rabbit_ng/sources/: __init__.py  github_api.py
tests/: test_cli.py  test_main.py
tests/data/: bot_features.csv  human_activities.json  human_events.json  human_features.csv
tests/tests_predictor/: test_compute_features.py  test_models.py  test_predictor.py
tests/tests_sources/: test_github_api.py
