[project]
name = "rabbit-ng"
version = "3.0.0"
license = {text = "Apache-2.0"}
description = "GitHub bot identification tool based on activity sequences"
readme = {file = "README.md", content-type = "text/markdown"}
urls = {Homepage = "https://github.com/sgl-umons/RABBIT"}
requires-python = ">=3.11"
dependencies = [
    "ghmap>=2.0.2",
    "numpy>=2.3.5, <3.0.0",
    "onnxruntime>=1.23.2, <2.0.0",
    "pandas>=2.3.3,<4.0.0",
    "python-dotenv>=1.2.1, <2.0.0",
    "requests>=2.32.5, <3.0.0",
    "typer>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rabbit-ng = "rabbit_ng.cli:app"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3,<4.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
    "ruff>=0.14.7",
    "types-requests>=2.32.4",
]

[tool.ruff]
src = ["rabbit_ng", "tests"]

[tool.ruff.lint]
# allow unused imports in __init__.py files
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.coverage.run]
branch = true
source = ["rabbit_ng"]
omit = [
    "*/__init__.py",
]
